--- a/wine_analysis_2.ipynb
+++ b/wine_analysis_2.ipynb
@@ -326,7 +326,12 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -1746,7 +1751,12 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -1778,11 +1788,11 @@
     }
    ],
    "source": [
-    "sns.set(style=\"ticks\", palette=\"pastel\")\n",
+    "# sns.set(style=\"ticks\", palette=\"pastel\")\n",
     "\n",
-    "sns.boxplot(x=indie_vars, y=dep_var, palette=[\"m\", \"g\"],\n",
-    "            data=df_logged)\n",
-    "#sns.despine(offset=10, trim=True)"
+    "# sns.boxplot(x=indie_vars, y=dep_var, palette=[\"m\", \"g\"],\n",
+    "#             data=df_logged)\n",
+    "# #sns.despine(offset=10, trim=True)"
    ]
   },
   {
